--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -81,21 +81,24 @@
         <div class="navbar-inner">
           <div class="container">
             <a class="brand" th:href="@{/}"><img th:src="@{/resources/img/logo.png}" alt="Spring Security Sample"/></a>
-            <div class="nav-collapse collapse" th:with="currentUser=${#httpServletRequest.userPrincipal?.principal}">
-              <div th:if="${currentUser != null}">
-                  <form class="navbar-form pull-right" th:action="@{/logout}" method="post">
-                      <input type="submit" value="Log out" />
-                  </form>
-                  <p class="navbar-text pull-right" th:text="${currentUser?.firstName} + ' ' + ${currentUser?.lastName}">
-                    sample_user
-                  </p>
-              </div>
-              <ul class="nav">
-                <li><a th:href="@{/}">Inbox</a></li>
-                <li><a th:href="@{/(form)}">Compose</a></li>
-              </ul>
-            </div>
-          </div>
+
+<div class="nav-collapse collapse" 
+     th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+  <div th:if="${currentUser != null}">
+      <form class="navbar-form pull-right" th:action="@{/logout}" method="post">
+          <input type="submit" value="Log out" />
+      </form>
+      <p class="navbar-text pull-right" th:text="${currentUser}">
+        sample_user
+      </p>
+  </div>
+  <ul class="nav">
+    <li><a th:href="@{/}">Inbox</a></li>
+    <li><a th:href="@{/(form)}">Compose</a></li>
+  </ul>
+</div>
+
+        </div>
       </div>
     </div>
       <!-- Begin page content -->
