--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -93,6 +93,7 @@
               <ul class="nav">
                 <li><a th:href="@{/}">Inbox</a></li>
                 <li><a th:href="@{/(form)}">Compose</a></li>
+                <li><a th:href="@{/h2/}">H2</a></li>
               </ul>
             </div>
           </div>
