Add Sign Up Support
Fixes gh-1

--- a/src/main/resources/views/layout.html
+++ b/src/main/resources/views/layout.html
@@ -94,6 +94,7 @@
                 <li><a th:href="@{/}">Inbox</a></li>
                 <li><a th:href="@{/(form)}">Compose</a></li>
                 <li><a th:href="@{/h2/}">H2</a></li>
+                <li><a th:href="@{/signup}">Sign Up</a></li>
               </ul>
             </div>
           </div>
